Fix text overflow when message is too lengthy

--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,12 @@
   * {
     @apply border-border outline-ring/50 box-border;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  button {
+    @apply active:scale-90;
   }
 }
